--- a/src/styles/InfoProduct.css
+++ b/src/styles/InfoProduct.css
@@ -7,6 +7,13 @@
 .MuiListItemText-root {
   display: flex;
   justify-content: flex-start;
-  height: 300px;
-  padding: 0px 20px;
+  padding: 10px 20px;
+}
+
+.MuiTypography-root {
+  display: flex;
+  justify-content: flex-start;
+  text-align: left;
+  width: 100%;
+  height: 100%;
 }
